[gd_scene load_steps=4 format=4 uid="uid://epq8xr4drwcu"]

[ext_resource type="Script" uid="uid://blw02bb8cfkhf" path="res://scenes/guide_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://g7tan0u6thu5" path="res://textures/icons/wifi.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bw2phftp67lcv" path="res://textures/icons/chevron_down.png" id="3"]

[node name="GuidePanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = -10
script = ExtResource("1")

[node name="GuideButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_type_variation = &"ButtonExpand"
toggle_mode = true

[node name="Icon" type="TextureRect" parent="GuideButton"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 25.0
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1

[node name="Name" type="Label" parent="GuideButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -25.0
offset_right = 1920.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Network"

[node name="TextureRect" type="TextureRect" parent="GuideButton"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -16.0
offset_right = -20.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MenuExpandPanel"

[node name="Label" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "The [url={\"window_network\"}] network[/url] window"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="GuideButton" to="." method="_on_guide_button_pressed"]
[connection signal="visibility_changed" from="GuideButton" to="GuideButton" method="_on_visibility_changed"]
[connection signal="meta_clicked" from="PanelContainer/Label" to="." method="_on_label_meta_clicked"]
